# Monarch

./: .gitignore  Cargo.toml  README.md  components.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci-build-release.yml
src/: backend.rs  lib.rs  manager.rs  model.rs  store.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: diagnostics.rs  lib.rs  main.rs
src-tauri/src/app/: commands.rs  events.rs  ipc.rs  mod.rs  shortcuts.rs  single_instance.rs  startup.rs  state.rs
src-tauri/src/backend/: mod.rs
src-tauri/src/backend/windows/: apply.rs  enumerate.rs  mod.rs  topology.rs  win32_types.rs
tools/: version-bump.mjs  windows-local-build.cmd
web/: App.tsx  main.tsx  styles.css  tauri.ts  types.ts
web/app/: ui.ts  utils.ts
web/app/components/: app-header.tsx  dialogs.tsx  layout-preview.tsx  main-tab.tsx  monitor-card.tsx  profiles-tab.tsx  settings-tab.tsx
web/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  sonner.tsx  tabs.tsx
