[package]
name = "monarch-desktop"
version = "1.0.0"
description = "Monarch - Display Output Manager"
authors = ["Codex"]
edition = "2021"

[lib]
name = "monarch_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
monarch = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Devices_Display",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_UI_ColorSystem",
  "Win32_UI_WindowsAndMessaging"
] }
